<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.poseidon.ModiOrderActivity">
    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/welcome" />



    <TextView
        android:id="@+id/ordern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#ff004b6b"
        android:layout_marginTop="80dp"
        android:textSize="50px"
        android:text="@string/ordername" />

    <Spinner
        android:id="@+id/ordername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ordern"
        android:layout_marginTop="80dp"
        android:layout_alignBottom="@+id/ordern" />

    <TextView
        android:id="@+id/orderd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#ff004b6b"
        android:layout_marginTop="30dp"
        android:textSize="50px"
        android:text="@string/orderdate"
        android:layout_below="@+id/ordern" />

    <Spinner
        android:id="@+id/orderdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/orderd"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ordern"
        android:layout_alignBottom="@+id/orderd" />


    <TextView
        android:id="@+id/sources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#ff004b6b"
        android:layout_marginTop="30dp"
        android:textSize="50px"
        android:text="@string/sources"
        android:layout_below="@+id/orderd" />

    <Spinner
        android:id="@+id/source"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/sources"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/orderd"
        android:layout_above="@+id/name" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#ff004b6b"
        android:layout_marginTop="30dp"
        android:textSize="50px"
        android:text="@string/toolname"
        android:layout_below="@+id/sources" />

    <Spinner
        android:id="@+id/toolname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/name"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/sources"
        android:layout_above="@+id/llybuttom" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:id="@+id/llybuttom"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/name">

        <Button
            android:id="@+id/clearbuttom"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="#ffff4c31"
            android:gravity="center"
            android:text="清空"
            android:layout_gravity="bottom"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/flag"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/qrybutton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="#ffff4c31"
            android:gravity="center"
            android:text="查询"
            android:layout_toRightOf="@+id/returnbutton"
            android:layout_alignParentRight="true"
            android:layout_weight="2" />
    </LinearLayout>

</RelativeLayout>
