<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.poseidon.CountOrderActivity">
    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/welcome" />



    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#ff004b6b"
        android:layout_marginTop="80dp"
        android:textSize="50px"
        android:text="@string/ordername" />

    <Spinner
        android:id="@+id/ordername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/name"
        android:layout_marginTop="80dp"
        android:layout_alignBottom="@+id/name" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#ff004b6b"
        android:layout_marginTop="30dp"
        android:textSize="50px"
        android:text="@string/orderdate"
        android:layout_below="@+id/ordername" />

    <Spinner
        android:id="@+id/orderdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/date"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ordername"
        android:layout_alignBottom="@+id/date" />

    <Button
        android:id="@+id/countbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="#ffff4c31"
        android:gravity="center"
        android:text="结算"
        android:layout_below="@+id/orderdate"
        android:layout_gravity="bottom" />
</RelativeLayout>
